<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_wikipedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:alpha="0"
        android:contentDescription="@string/search_on_wikipedia"
        android:src="@drawable/ic_wikipedia"
        app:layout_constraintBottom_toBottomOf="@+id/tf_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tf_search" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_standard_16dp"
        android:layout_marginTop="@dimen/gap_standard_16dp"
        android:layout_marginEnd="@dimen/gap_standard_16dp"
        android:hint="@string/search_on_wikipedia"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        app:helperText="@string/search_on_wikipedia_helper"
        app:helperTextEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/search_on_wikipedia"
        app:startIconDrawable="@drawable/ic_wikipedia">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_standard_16dp"
        android:layout_marginTop="@dimen/gap_standard_16dp"
        android:layout_marginEnd="@dimen/gap_standard_16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/not_available"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:src="@drawable/ic_no_photo_vector" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/PictureHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_standard_16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/gap_standard_16dp"
        android:text="@string/not_available"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_search"
        tools:text="2021-01-13" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/PictureHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_standard_16dp"
        android:layout_marginEnd="@dimen/gap_standard_16dp"
        android:text="@string/not_available"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        tools:text="Arches Across an Arctic Sky" />

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_standard_16dp"
        android:layout_marginTop="@dimen/gap_standard_16dp"
        android:layout_marginEnd="@dimen/gap_standard_16dp"
        android:text="@string/not_available"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_picture"
        tools:text="Ivan Smith" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_standard_16dp"
        android:layout_marginTop="@dimen/gap_half_8dp"
        android:layout_marginEnd="@dimen/gap_standard_16dp"
        android:text="@string/not_available"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_copyright"
        tools:text="What are these two giant arches across the sky? Perhaps the more familiar one, on the left, is the central band of our Milky Way Galaxy. This grand disk of stars and nebulas here appears to encircle much of the southern sky. Visible below the stellar arch is the rusty-orange planet Mars and the extended Andromeda galaxy. For a few minutes during this cold arctic night, a second giant arch appeared to the right, encircling part of the northern sky: an aurora. Auroras are much closer than stars as they are composed of glowing air high in Earth's atmosphere.  Visible outside the green auroral arch is the group of stars popularly known as the Big Dipper.  The featured digital composite of 18 images was captured in mid-December over the Lofoten Islands in Norway. APOD Year in Review (2020): RJN's Night Sky Network Lecture" />

</androidx.constraintlayout.widget.ConstraintLayout>
